@@ -9,7 +9,7 @@ import br.com.radarfornecedor.radar.model.Usuario;
 import br.com.radarfornecedor.radar.repository.AvaliacaoProdutoRepository;
 import br.com.radarfornecedor.radar.repository.FornecedorRepository;
 import br.com.radarfornecedor.radar.repository.ProdutoRepository;
-import jakarta.servlet.http.HttpSession;
+import javax.servlet.http.HttpSession;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
@@ -36,7 +36,7 @@ public class AvaliacaoProdutoService {
             throw new IllegalStateException("Apenas clientes podem avaliar produtos.");
         }
 
-        Produto produto = produtoRepository.findById(dados.produtoId())
+        Produto produto = produtoRepository.findById(dados.getProdutoId())
                 .orElseThrow(() -> new IllegalArgumentException("Produto não encontrado."));
         if (produto.getFornecedorId() == null) {
             throw new IllegalArgumentException("Este produto ainda não está vinculado a uma empresa.");
@@ -46,8 +46,8 @@ public class AvaliacaoProdutoService {
         avaliacao.setProdutoId(produto.getId());
         avaliacao.setFornecedorId(produto.getFornecedorId());
         avaliacao.setCliente(usuario.getUsername());
-        avaliacao.setNota(dados.nota());
-        avaliacao.setComentario(dados.comentario().trim());
+        avaliacao.setNota(dados.getNota());
+        avaliacao.setComentario(dados.getComentario().trim());
         return avaliacaoRepository.save(avaliacao);
     }
 
@@ -63,8 +63,8 @@ public class AvaliacaoProdutoService {
             String empresa = fornecedor == null ? "Empresa não encontrada" : fornecedor.getNome();
             double media = entry.getValue().stream().mapToInt(AvaliacaoProduto::getNota).average().orElse(0);
             return new RankingEmpresaResponse(entry.getKey(), empresa, media, entry.getValue().size());
-        }).sorted(Comparator.comparingDouble(RankingEmpresaResponse::media).reversed()
-                .thenComparing(Comparator.comparingLong(RankingEmpresaResponse::totalAvaliacoes).reversed()))
-                .toList();
+        }).sorted(Comparator.comparingDouble(RankingEmpresaResponse::getMedia).reversed()
+                .thenComparing(Comparator.comparingLong(RankingEmpresaResponse::getTotalAvaliacoes).reversed()))
+                .collect(Collectors.toList());
     }
 }
